--- a/paper.tex
+++ b/paper.tex
@@ -431,7 +431,7 @@
 % in the abstract or keywords.
 
 \begin{abstract}
-Energy-efficient Time- and Wavelength- Division Multiplexed Passive Optical Network (TWDM-PON) has been intensely investigated. However, conventional energy-saving schemes aimed at maximizing energy efficiency may bring about repeated power-state transitions between sleep mode and active mode, which result in periodic device-temperature cycling and frequent wavelength reassignment. Specifically, periodic temperature cycling will decrease device lifetime, and frequent wavelength reassignment may cause massive traffic migrations, which will greatly deteriorate network Quality of Service (QoS). These side effects become non-trival when traffic fluctuates sharply in future networks. In this letter, we propose a Wavelength-Postponed-Switching-off (WPS) strategy to tackle these problems by postponing the power-off of redundant wavelengths. Illustrative results show that, compared with conventional Maximum-Energy-Saving (MES) algorithms, the proposed strategy can provide balanced performance of both energy efficiency and device lifetime, while decreasing the service interruption caused by traffic migrations when turning on or off the equipment.
+Energy-efficient Time- and Wavelength- Division Multiplexed Passive Optical Network (TWDM-PON) has been intensely investigated. However, conventional energy-saving schemes aimed at maximizing energy efficiency may bring about repeated power-state transitions between sleep mode and active mode, which result in periodic device-temperature cycling and frequent wavelength reassignment. Specifically, periodic temperature cycling will decrease device lifetime, and frequent wavelength reassignment may cause massive traffic migrations, which will greatly deteriorate network Quality of Service (QoS). These side effects become non-trival when traffic fluctuates sharply as expected in future networks. In this letter, we propose a Wavelength-Postponed-Switching-off (WPS) strategy to reduce power-state transitions by means of postponing the power-off of redundant wavelengths. Illustrative results show that, compared with conventional Maximum-Energy-Saving (MES) algorithms, the proposed strategy can provide balanced performance of both energy efficiency and device lifetime, while decreasing the service interruption caused by traffic migrations when turning on or off the equipment.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
@@ -474,9 +474,9 @@ Device lifetime, traffic migration, energy efficiency, TWDM-PON.
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart{P}{assive} Optical Network (PON) is widely implemented in optical access networks for its passive features, cost efficiency and scalability. To meet the rapid bandwidth increase driven by real-time video streaming, Time- and Wavelength- Division Multiplex PON (TWDM-PON) has been proposed and regarded as a promising solution for optical access networks in the near future \cite{6289432}.
 
-Many energy-saving algorithms have been proposed in previous studies \cite{6802896,6320604,7249119}. However, these methods, which only focus on energy efficiency, may bring about many side effects. Two main drawbacks, lifetime degeneration and traffic migration, should be highlighted here. On one hand, when a heating device, such as transmitters equipped in the line card, is turning on and off repeatedly, thermal fatigue may occur in the materials, thus leading to a significant lifetime degeneration \cite{kressel2006semiconductor}. The experiment in \cite{schulz2012thermal} points out that the temperature swing turns out to be the dominant factor in device lifetime deterioration. On the other hand, traffic migration occurs along with wavelength reconfiguration. If the migration transpires, incoming packets have to be buffered or dropped until the reconfiguration is completed, which causes delay or loss of packets and degrades the Quality of Service (QoS). With the popularization of multimedia streaming and the rise of virtual reality, huge bandwidth is required in access networks. As reported by a video-on-demand provider UUSee, a single user's behavior will influence the bandwidth requirement notably \cite{6195785}. Meanwhile, emerging traffic patterns, like tidal traffic \cite{7444562}, will make this problem even worse.  As a consequence, severely-fluctuated traffic drives wavelength reconfigurations to be more frequent than ever before. Therefore, conventional energy-saving-oriented algorithms should be revisited carefully to cope with these new challenges.
+Many energy-saving algorithms have been proposed in previous studies \cite{6069715,6320604,7249119}. However, these methods, which only focus on energy efficiency, may bring about many side effects. Two main drawbacks, lifetime degeneration and traffic migration, should be highlighted here. On one hand, when a heating device, such as transmitters equipped in the line card, is turning on and off repeatedly, thermal fatigue may occur in the materials, thus leading to a significant lifetime degeneration \cite{kressel2006semiconductor}. The experiment in \cite{schulz2012thermal} points out that the temperature swing turns out to be the dominant factor in device lifetime deterioration. On the other hand, traffic migration occurs along with wavelength reconfiguration. If the migration transpires, incoming packets have to be buffered or dropped until the reconfiguration is completed, which causes delay or loss of packets and degrades the Quality of Service (QoS). With the popularization of multimedia streaming and the rise of virtual reality, huge bandwidth is required in access networks. As reported by a video-on-demand provider UUSee, a single user's behavior will influence the bandwidth requirement notably \cite{6195785}. Meanwhile, emerging traffic patterns, like tidal traffic \cite{7444562}, will make this problem even worse.  As a consequence, severely-fluctuated traffic drives wavelength reconfigurations to be more frequent than ever before. Therefore, conventional energy-saving-oriented algorithms should be revisited carefully to cope with these new challenges.
 
-In this paper, a Wavelength-Postponed-Switching-off (WPS) strategy, realized by postponing the power-off of redundant wavelengths, is first introduced to handle frequent power-state transitions and massive traffic migrations simultaneously, when rapid traffic fluctuation transpires in optical access networks. We develop a hybrid C++/Python simulation platform to evaluate the performance of the strategy. Numerical results show that our strategy can provide balanced performance of both energy efficiency and device lifetime, while decreasing the service interruption caused by traffic migrations when turning on or off the equipment.
+In this paper, a Wavelength-Postponed-Switching-off (WPS) strategy, realized by postponing the power-off of redundant wavelengths, is first introduced to handle frequent power-state transitions and massive traffic migrations simultaneously, when rapid traffic fluctuation transpires in optical access networks. We develop a simulation platform to evaluate the performance of the strategy. Simulation results show that our strategy can provide balanced performance of both energy efficiency and device lifetime, while decreasing the service interruption caused by traffic migrations when turning on or off the equipment.
 
 
 %\hfill mds
@@ -599,7 +599,7 @@ In this paper, a Wavelength-Postponed-Switching-off (WPS) strategy, realized by 
 \section{System Model}
 The TWDM-PON architecture is shown in Fig. \ref{architecture}. For simplicity, only downstream wavelengths are depicted in the diagram. Tunable transmitters and receivers are equipped in Optical Network Units (ONUs) and Optical Line Terminal (OLT). As presented in Fig. \ref{architecture}, ONU \#1 and \#2 are assigned with wavelength $\lambda_{1}$. It is the same case with ONU \#3 and \#4. A wavelength tends to contain more ONUs for energy saving purpose when traffic load declines.
 
-\textbf{Traffic migration}: Constrained by the limited bandwidth of a single wavelength, some ONUs need to be moved to a new wavelength. Average ONU migration delay is around 1000 ms \cite{Li:14}, and all service provided by the migrated ONUs will be interrupted during migration procedures. To maintain continuous service, ONU migration should not occur too frequently. Generally, the time interval of operation is typically hour-level in traditional energy-saving algorithms. Therefore, ONU migration should be operated wisely to make the best use of bandwidth, while avoiding migration interruptions.
+\textbf{Traffic migration}: Constrained by the limited bandwidth of a single wavelength, some ONUs need to be moved to a new wavelength, whihc is called ONU migration. Average ONU migration delay is around 1000 ms \cite{Li:14}, and all service provided by the migrated ONUs will be interrupted during migration procedures. To maintain continuous service, ONU migration should not occur too frequently. Generally, the time interval of operation is typically hour-level in traditional energy-saving algorithms. Therefore, ONU migration should be operated wisely to make the best use of bandwidth, while avoiding migration interruptions.
 
 \textbf{Device lifetime}: The logarithm of lifetime is inversely proportional to the device working temperature. The impact caused by temperature cycling is modeled by Coffin-Manson Equation \cite{manson1954behavior}. According to the model presented in \cite{7105670}, the overall failure rate of the device can be expressed as \\
 \begin{footnotesize}
@@ -607,7 +607,7 @@ The TWDM-PON architecture is shown in Fig. \ref{architecture}. For simplicity, o
 \gamma = \frac{T_{on}}{T_{total}}\gamma_{on} + \frac{T_{off}}{T_{total}}\gamma_{off} + \frac{f_{trans}}{N_{f}T_{total}}
 \end{equation}
 \end{footnotesize}
-Note that, failure rate, denoted as $ \gamma $ here, represents the frequency of failure events per hour and the device lifetime can be calculated by $1 /\gamma$. $T_{on}$ and $T_{off}$ are the amount of time the device stays in active state and sleep state, respectively. $\gamma_{on}$ is the failure rate when the device in active state, and $\gamma_{off}$ is the failure rate in sleep state. $f_{trans}$ is the number of power state transitions, and $N_{f}$ is the number of temperature cycles achieved by the device before a failure occurs. We assume that failure events are statistically independent.
+Note that, failure rate, denoted as $ \gamma $ here, represents the frequency of failure events per hour and the device lifetime can be calculated by $1 /\gamma$. $T_{on}$ and $T_{off}$ are the amount of time the device stays in active state and sleep state, respectively. $\gamma_{on}$ is the failure rate when the device in active state, and $\gamma_{off}$ is the failure rate in sleep state. $f_{trans}$ is the number of power state transitions, and $N_{f}$ is the number of temperature cycles achieved by the device before a failure occurs. For example, failure rate of a device in active state is $ 10^{-5}$ and its lifetime in sleep state is 3-fold than in active state. The number of cycles $ N_{f} $ is set to $ 10^{4}$. This device suffers 2 state transitions in one day repeatedly and the time staying on two states is equal. All values are based on the experiments conducted by Cisco and Toshiba, which we will show in simulation part. According to Equotion (1), the failure rate in this situation is 1.45$ \times $ $ 10^{-5}$.
 \vspace{-3.0mm}
 
 \section{Wavelength-Postponed-Switching-off (WPS) Strategy}
@@ -621,9 +621,9 @@ Note that, failure rate, denoted as $ \gamma $ here, represents the frequency of
 \end{figure}
 
 \subsection{What is the Number of Working Wavelengths}
-Conventional energy-efficient approaches, like Maximum-Energy-Saving (MES) strategy, aimed at minimizing the number of working wavelengths\footnote{We use the number of active wavelengths in each period to capture the energy consumption. A one-order linear model can be applied to get more accurate energy consumption.}. This is called bin-packing problem and can not get an optimal solution in polynomial time. Here, we further use a heuristic algorithm, First Fit Decreasing (FFD) \cite{baker1985new}, to solve it. FFD is described below: sort ONUs in descending order of traffic load in each period, and then associate them with the first wavelength with sufficient remaining bandwidth. We can estimate the minimum number of required working wavelengths each period by FFD.
+Conventional energy-efficient approaches, like Maximum-Energy-Saving (MES) strategy, aimed at minimizing the number of working wavelengths\footnote{We use the number of active wavelengths in each period to capture the energy consumption. A one-order linear model can be applied to get more accurate energy consumption.}. This is called bin-packing problem and can not get an optimal solution in polynomial time. Here, we further use a heuristic algorithm, First Fit Decreasing (FFD) \cite{baker1985new}, to solve it. FFD is described below: sort ONUs in descending order of traffic load in each period\footnote{In our simulation the traffic load is discrete and we generate different traffic loads each hour. So there are 24 periods in one day.}, and then associate them with the first wavelength with sufficient remaining bandwidth. We can estimate the minimum number of required working wavelengths each period by FFD.
 
-Due to these side effects caused by MES (including FFD), we propose the WPS, which is described in Algorithm 1 in detail. \emph{The main idea of WPS is to postpone the power-off some redundant wavelengths for several periods even when the traffic load declines}. Compared to MES which employs as few working wavelengths as possible, WPS reserves some wavelength resource for future possible rapid traffic fluctuations. A simple example is depicted in Fig. \ref{WPS}. The maximum number of postponed wavelengths is 3, and postponed time is 5 periods. The number of working wavelengths in each period is annotated in MES and WPS mode, respectively. In this cycle, the number of power state transitions by MES is 16 while only 6 by WPS. 
+Due to these side effects, device lifetime deterioration and traffic migration as we already mention before, caused by MES (including FFD), we propose the WPS, which is described in Algorithm 1 in detail. \emph{The main idea of WPS is to postpone the power-off of some redundant wavelengths for several periods even when the traffic load declines}. Compared to MES which employs as few working wavelengths as possible, WPS reserves some wavelength resource for future possible rapid traffic fluctuations. When WPS is triggered, it will take effect in the next several periods, which are called postponed time. The postponed wavelengths are the wavelengths should have been shut down in MES strategy but still works in WPS strategy. A simple example is depicted in Fig. \ref{WPS}. The maximum number of postponed wavelengths is 3, and postponed time is 5 periods. The number of working wavelengths in each period is annotated in MES and WPS mode, respectively. In this cycle, the number of power state transitions by MES is 16 while only 6 by WPS. 
 
 \renewcommand{\algorithmicrequire}{ \textbf{Initialize:}}
 \begin{algorithm}[h]
@@ -726,9 +726,9 @@ This problem can be transformed to multiple knapsack problem \cite{dawande2000ap
 Here, we analyze the complexity of Algorithm 2. There are two sort of operations for $W$ wavelengths and $N$ ONUs, whose complexity is $O(WlogW + NlogN)$. In sentence 7, we traverse the whole wavelengths and add ONUs in descending order, and its complexity is $O(WNlogN)$. In sentence 14-20, the remained ONUs are added and its complexity is $O(2WN)$. Note that $N > W$, and the complexity of Algorithm 2 is $O(N^2logN)$.
 \vspace{-4.0mm}
 
-\section{Illustrative Numerical Evaluations}
+\section{Illustrative Evaluations}
 \subsection{Simulation Setup}
-In our system configurations, the TWDM-PON system consists of 64 ONUs and 32 wavelengths. The bandwidth of a wavelength is 10 Gbit/s and the maximum data rate in one ONU is no more than 5 Gbit/s. We investigate the lifetime of line cards in OLT side. In accordance with Cisco \cite{cisco}, the lifetime of a line card is approximately 116052 hours. In sleep state, device lifetime is 3-fold than in working state. The number of cycles $ N_{f} $ is set $ 10^{4}$ according to the experiments in \cite{toshiba}\cite{ghaffarian2000accelerated}. 
+In our system configurations, the TWDM-PON system consists of 64 ONUs and 32 wavelengths. The bandwidth of a wavelength is 10 Gbit/s and the maximum data rate in one ONU is no more than 5 Gbit/s. We investigate the lifetime of line cards in OLT side. In accordance with Cisco \cite{cisco}, the lifetime of a line card is approximately 116052 hours. In sleep state, device lifetime is 3-fold than in working state. The number of cycles $ N_{f} $ is set to $ 10^{4}$ according to the experiments in \cite{toshiba}\cite{ghaffarian2000accelerated}. 
 
 To generate different fluctuant traffic loads conformed to the reality, three kinds of traffic load are generated in the following ways. First, a basic traffic matrix is set up for each ONU in one day, with high bandwidth requirement in the daytime while relatively low at night. Then, we insert different levels of randomness into the basic traffic matrix to generate different kinds of traffic fluctuations. We use the variance of total traffic load in the observed time to describe the network traffic fluctuations. It is worth pointing that the variance of total traffic here is equal to the sum of the variance of basic traffic and randomness, whose distributions are independent. The variance of basic traffic is $ \sigma_{0}^{2} $ and other three fluctuant traffic's variances are $ 1.06\sigma_{0}^{2} $,  $ 1.11\sigma_{0}^{2} $, and  $ 1.20\sigma_{0}^{2} $ compared to the basic traffic, respectively. The subgraph on the upper left in Fig. \ref{traffic} shows the basic traffic matrix and the residual subgraphs represent three different fluctuant traffic load. The observed time is 72000 hours (for simplicity, only 24 hours are presented in the figure).
 
@@ -775,11 +775,12 @@ To generate different fluctuant traffic loads conformed to the reality, three ki
 \subsection{Performance Analysis}
 Fig. \ref{numerical}(a-c) show energy consumption, device lifetime, and traffic migration when MES and WPS are applied to traffic-III. The $n$ in WPS (equals 1,2,3,4,5) represents the maximum number of postponed working wavelengths. We can find that energy consumption increases with the increment of the maximum number of postponed working wavelengths and postponed time. WPS consumes more energy than MES since extra working wavelengths are not powered off immediately. According to Fig. \ref{numerical}(b), a line card's lifetime reduces more than 50\% when energy efficiency is optimized. Owing to less frequent power state transitions, WPS$ -5 $ mitigates the lifetime degeneration by 17\% when postponed time is 7 hours, which means the device can work for more 18568 hours with our previous assumptions. In terms of traffic migration, MES triggers average 21\% traffic migration in each period while only 9\% occurs when WPS$ -5 $ is applied based on Fig. \ref{numerical}(c). Due to less frequent power state transitions, ONUs are moved to a new wavelength in a lower possibility compared to MES.
 
-Fig. \ref{numerical_2} demonstrate the system's performance when traffic fluctuates differently. Three kind of fluctuant traffic load are selected . In Fig. \ref{numerical_2}, default points show performance achieved by MES while minimum migration/lifetime degeneration points present the performance achieved by WPS$ -5 $ with 7 hours' delay. Device lifetime can be reduced by 45\%, 51\% and 56\% at default points compared to continuously working state while WPS alleviates the lifetime degeneration by 16\%, 15\%, and 17\% at minimum lifetime degeneration points, respectively. As for traffic migration, average 16\%, 18\%, and 21\% traffic migration occurs in each period while low to 6\%, 7\%, 9\% is achieved by WPS at minimum migration points. It can be noticed that when traffic fluctuates more rapidly, the device lifetime deteriorates more severely and more traffic migration occurs. It is because more fluctuant traffic load results in larger differences in the number of working wavelengths between two periods, thus leading to more power state transitions and traffic migration. WPS reduces these differences by postponing the power-off of extra working wavelengths, which alleviates the device lifetime degeneration as well as reduces traffic migration simultaneously.
+Fig. \ref{numerical_2} demonstrates the system's performance when traffic fluctuates differently. Three kind of fluctuant traffic load are selected . In Fig. \ref{numerical_2}, default points show performance achieved by MES while minimum migration/lifetime degeneration points present the performance achieved by WPS$ -5 $ with 7 hours' delay. Device lifetime can be reduced by 45\%, 51\% and 56\% at default points compared to continuously working state while WPS alleviates the lifetime degeneration by 16\%, 15\%, and 17\% at minimum lifetime degeneration points, respectively. As for traffic migration, average 16\%, 18\%, and 21\% traffic migration occurs in each period while low to 6\%, 7\%, 9\% is achieved by WPS at minimum migration points. When less traffic migration occurs, the service interruption can be reduced, which improves the QoS performance.
+It can be noticed that when traffic fluctuates more rapidly, the device lifetime deteriorates more severely and more traffic migration occurs. It is because more fluctuant traffic load results in larger differences in the number of working wavelengths between two periods, thus leading to more power state transitions and traffic migration. WPS reduces these differences by postponing the power-off of extra working wavelengths, which alleviates the device lifetime degeneration as well as reduces traffic migration simultaneously.
 \vspace{-3.0mm}
 
 \section{Conclusion}
-Conventional energy efficiency schemes may deteriorate the device lifetime and cause huge traffic migration in the TWDM-PON-enabled access networks. The situation becomes more severe when rapidly-fluctuant traffic transpires. We propose a simple and effective scheme to balance these aspects. Numerical results demonstrate that our strategy can achieve longer lifetime and less traffic migration with reasonable energy compromise.
+Conventional energy efficiency schemes may deteriorate the device lifetime and cause huge traffic migration in the TWDM-PON-enabled access networks. The situation becomes more severe when rapidly-fluctuant traffic transpires. We propose a simple and effective scheme to balance these aspects. Simulation results demonstrate that our strategy can achieve longer lifetime and less traffic migration with reasonable energy compromise.
 \vspace{-5.0mm}
 
 % if have a single appendix:
