--- a/paper.tex
+++ b/paper.tex
@@ -455,7 +455,7 @@ Device lifetime, ONU migration, energy efficiency, TWDM-PON.
 % creates the second title. It will be ignored for other modes.
 \IEEEpeerreviewmaketitle
 
-\vspace{-4.0mm}
+\vspace{-3.0mm}
 
 \section{Introduction}
 % The very first letter is a 2 line initial drop letter followed
@@ -475,9 +475,9 @@ Device lifetime, ONU migration, energy efficiency, TWDM-PON.
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart{P}{assive} Optical Network (PON) is widely implemented in optical access networks for its passive features, cost efficiency, and scalability. To meet the rapid bandwidth increase driven by real-time video streaming, Time- and Wavelength- Division Multiplex PON (TWDM-PON) has been proposed and regarded as a promising solution for optical access networks in the near future \cite{6289432}.
 
-Many energy-saving algorithms have been proposed in previous studies \cite{6069715,6320604,7249119}. However, these methods, which only focus on energy efficiency, may bring about many side effects. Two main drawbacks, lifetime degeneration, and Optical Network Unit (ONU) migrations, should be highlighted here. On one hand, when a heating device, such as transmitters equipped in the line card, is turning on and off repeatedly, thermal fatigue may occur in the materials, thus leading to a significant lifetime degeneration \cite{kressel2006semiconductor}. The experiment in \cite{schulz2012thermal} points out that the temperature swing turns out to be the dominant factor in device lifetime deterioration. On the other hand, ONU migrations occur along with wavelength reconfiguration. If the migration transpires, incoming packets have to be buffered or dropped until the reconfiguration is completed, which causes delay or loss of packets and degrades the Quality of Service (QoS). Huge bandwidth is required with the popularization of multimedia streaming and virtual reality. As reported by a video-on-demand provider UUSee, a single user's behavior will influence the bandwidth requirement notably \cite{6195785}. Meanwhile, emerging traffic patterns, like tidal traffic \cite{7444562}, will make this problem even worse.  As a consequence, severely-fluctuated traffic drives wavelength reconfigurations to be more frequent than ever before. Therefore, conventional energy-saving-oriented algorithms should be revisited carefully to cope with these new challenges.
+Many energy-saving algorithms have been proposed in previous studies \cite{6069715,6320604,7249119}. However, these methods, which only focus on energy efficiency, may bring about many side effects. Two main drawbacks, lifetime degeneration, and Optical Network Unit (ONU) migrations, should be highlighted here. On one hand, when a heating device, such as a transmitter equipped in the line card, is turning on and off repeatedly, thermal fatigue may occur in the materials, thus leading to a significant lifetime degeneration \cite{kressel2006semiconductor}. The experiment in \cite{schulz2012thermal} points out that the temperature swing turns out to be the dominant factor in device lifetime deterioration. On the other hand, ONU migrations occur along with wavelength reconfiguration. If the migration transpires, incoming packets have to be buffered or dropped until the reconfiguration is completed, which causes delay or loss of packets and degrades the Quality of Service (QoS). Meanwhile, emerging traffic patterns, like tidal traffic \cite{7444562}, will make this problem even worse.  As a consequence, severely-fluctuated traffic drives wavelength reconfigurations to be more frequent than ever before. Therefore, conventional energy-saving-oriented algorithms should be revisited carefully to cope with these new challenges.
 
-In this paper, a Wavelength-Postponed-Switching-off (WPS) strategy, realized by postponing the power-off of redundant wavelengths, is first introduced. The intuition of this work is balancing energy efficiency and device lifetime, by compromising a little energy efficiency, for better lifetime improvement. Simulation results show that our strategy can provide a balanced performance of both energy efficiency and device lifetime while decreasing the service interruption caused by ONU migrations when turning on or off the equipment.
+In this paper, a Wavelength-Postponed-Switching-off (WPS) strategy, realized by postponing the power-off of redundant wavelengths, is first introduced. The intuition of this work is balancing energy efficiency and device lifetime, by compromising a little energy efficiency for a considerable lifetime improvement. Simulation results show that our strategy can provide a balanced performance of both energy efficiency and device lifetime, and decrease service interruptions caused by ONU migrations when turning on or off the equipment.
 
 
 %\hfill mds
@@ -595,12 +595,12 @@ In this paper, a Wavelength-Postponed-Switching-off (WPS) strategy, realized by 
 	\label{architecture}
 	\vspace{-6.0mm}
 \end{figure}
-\vspace{-3.0mm}
+\vspace{-2.0mm}
 
 \section{System Model}
 The TWDM-PON architecture is shown in Fig. \ref{architecture}. For simplicity, only downstream wavelengths are depicted in the diagram. Tunable transmitters and receivers are equipped in ONU and Optical Line Terminal (OLT). As presented in Fig. \ref{architecture}, ONU \#1 and \#2 are assigned with wavelength $\lambda_{1}$. It is the same case with ONU \#3 and \#4.
 
-\textbf{ONU migration}: Constrained by the limited bandwidth of a single wavelength, the wavelength supporting the traffic in the ONU may be changed, which is called ONU migration. The performance metric for ONU migration is the migrated traffic amount. Average ONU migration delay ranges from 200 ms to 1600 ms \cite{Li:14}, and all service provided by the migrated ONUs will be interrupted during migration procedures. To maintain continuous service, ONU migration should not occur too frequently. Therefore, ONU migrations should be operated wisely to make the best use of bandwidth, while avoiding migration interruptions.
+\textbf{ONU migration}: ONU migration, as introduced in \cite{wang2014energy}, is performed at the cost of service interruption. Generally, average ONU migration delay ranges from 200 ms to 1600 ms \cite{Li:14}. We use the migrated traffic amount to evaluate the influence scope of ONU migration. To maintain continuous service, ONU migrations should not occur frequently. Therefore, ONU migrations should be operated wisely to make the best use of bandwidth, while avoiding migration interruptions.
 
 \textbf{Device lifetime}: The logarithm of the lifetime is inversely proportional to the device working temperature. The impact caused by temperature cycling is modeled by Coffin-Manson Equation \cite{manson1954behavior}. According to the model presented in \cite{7105670}, the overall failure rate of the device can be expressed as below.
 
@@ -609,22 +609,20 @@ The TWDM-PON architecture is shown in Fig. \ref{architecture}. For simplicity, o
 \gamma = \frac{T_{on}}{T_{total}}\gamma_{on} + \frac{T_{off}}{T_{total}}\gamma_{off} + \frac{f_{trans}}{N_{f}T_{total}}
 \end{equation}
 \end{footnotesize}
-Failure rate, denoted as $ \gamma $ here, represents the frequency of failure events per hour and the device lifetime can be calculated by $1 /\gamma$. $T_{on}$ and $T_{off}$ are the amount of time the device stays in active state and sleep state, respectively. $\gamma_{on}$ is the failure rate when the device in active state, and $\gamma_{off}$ is the failure rate in sleep state. $f_{trans}$ is the number of power state transitions, and $N_{f}$ is the number of temperature cycles achieved by the device before a failure occurs. We assume that failure events are statistically independent. For example, a device's $\gamma_{on}$ is $ 10^{-5}$ and $\gamma_{off}$ is $ 2.5\times10^{-6}$.  $ N_{f} $ is set to $ 10^{4}$. This device suffers two state transitions in one day repeatedly and the time staying in two states is equal. According to Equation (1), the failure rate in this situation is 1.45$ \times $ $ 10^{-5}$.
-\vspace{-4.0mm}
+Failure rate, denoted as $ \gamma $ here, represents the frequency of failure events per hour and the device lifetime can be calculated by $1 /\gamma$. $T_{on}$ and $T_{off}$ are the amount of time that a device stays in active state and sleep state, respectively. $\gamma_{on}$ is the failure rate when the device in active state, and $\gamma_{off}$ is the failure rate in sleep state. $f_{trans}$ is the number of power state transitions, and $N_{f}$ is the number of temperature cycles achieved by the device before a failure occurs. We assume that failure events are statistically independent. For example, a device's $\gamma_{on}$ is $ 10^{-5}$ and $\gamma_{off}$ is $ 2.5\times10^{-6}$.  $ N_{f} $ is set to $ 10^{4}$. This device suffers two state transitions in one day repeatedly, and staying times in these two states are equal. According to Equation (1), the failure rate in this situation is 1.45$ \times $ $ 10^{-5}$.
 
 \section{Wavelength-Postponed-Switching-off (WPS) Strategy}
 \begin{figure}[t]
     \centering 
-        \includegraphics[width=0.53\columnwidth]{WPS.pdf}\\ 
+        \includegraphics[width=0.60\columnwidth]{WPS.pdf}\\ 
     \caption{ An example of WPS.}
     \label{WPS}
     \vspace{-6.0mm}
 \end{figure}
-In Section III-A, we propose WPS strategy to determine the number of working wavelengths. According to these results, we provide algorithms on how to migrate the traffic in Section III-B. The combination of the two parts will provide practical operations in network reconfigurations.
-\vspace{-5.0mm}
+In Section III-A, we propose WPS strategy to determine the number of working wavelengths. According to these results, we provide an algorithm on how to migrate the traffic in Section III-B. The combination of the two parts will provide practical operations in network reconfigurations.
 
 \subsection{What is the Number of Working Wavelengths}
-Conventional energy-efficient approaches, like Maximum-Energy-Saving (MES) strategy, aimed at minimizing the number of working wavelengths\footnote{We use the number of active wavelengths in each period to capture the energy consumption.}. This is called bin-packing problem and can not get an optimal solution in polynomial time. Here, we further use a heuristic algorithm, First Fit Decreasing (FFD) \cite{baker1985new}, to solve it. FFD is described below: sort ONUs in descending order of traffic load in each period\footnote{In our simulation, we reconfigure the wavelength assignment every one hour. So there are 24 periods in one day.}, and then associate them with the first wavelength with sufficient remaining bandwidth. We can estimate the minimum number of required working wavelengths each period by FFD.
+Conventional energy-efficient approaches, like Maximum-Energy-Saving (MES) strategy, aimed at minimizing the number of working wavelengths\footnote{We use the number of active wavelengths in each period to capture the energy consumption.}. This can be regarded as the bin-packing problem, and we can not get an optimal solution in polynomial time. Here, we further use a heuristic algorithm, First Fit Decreasing (FFD) \cite{baker1985new} to solve it. FFD is described below: sort ONUs in descending order of traffic load in each period\footnote{In our simulation, we reconfigure the wavelength assignment every one hour. So there are 24 periods in one day.}, and then associate them with the first wavelength with sufficient remaining bandwidth. We can estimate the minimum number of required working wavelengths each period by FFD.
 
 Due to these side effects, device lifetime deterioration and ONU migration, we propose the WPS, which is described in Algorithm 1. \emph{The main idea of WPS is to postpone the power-off of some redundant wavelengths for several periods even when the traffic load declines}. Compared to MES which employs as few working wavelengths as possible, WPS reserves some wavelength resource for future possible rapid traffic fluctuations. 
 
@@ -691,7 +689,7 @@ Subject \ to \quad    & \sum_{i=1}^{N}x'_{ij}b_{i} \leq C \quad \forall \ j \in 
 
 Equation (2) tries to find the optimal wavelength reconfiguration. Constraint (3) ensures that traffic load in any wavelength should not exceed the capacity. Equation (4) indicates that a wavelength is working when any ONU is assigned with it. Constraint (5) limits the number of working wavelength.
 
-This problem can be transformed to multiple knapsack problem \cite{dawande2000approximation}, which is already proved to be NP-hard and not suitable for large networks. Therefore, we further develop a heuristic algorithm, named Wavelength Reassignment Algorithm (WRA) here, to obtain a sub-optimal answer. WRA is described in Algorithm 2. When traffic load increases, more wavelengths are activated and light-load ONUs are relocated preferentially. As traffic load declines, light-load wavelengths are powered off and the corresponding ONUs are reconfigured in descending order.
+This problem can be transformed to the multiple knapsack problem \cite{dawande2000approximation}, which is already proved to be NP-hard and not suitable for large networks. Therefore, we further develop a heuristic algorithm, named Wavelength Reassignment Algorithm (WRA) here, to obtain a sub-optimal answer. WRA is described in Algorithm 2. When traffic load increases, more wavelengths are activated and light-load ONUs are relocated preferentially. As traffic load declines, light-load wavelengths are powered off and the corresponding ONUs are reconfigured in descending order.
 
 \begin{algorithm}[h]
     \algsetup{linenosize=\tiny}
@@ -728,7 +726,7 @@ This problem can be transformed to multiple knapsack problem \cite{dawande2000ap
 \end{algorithm}
 \vspace{-3.0mm}
 Here, we analyze the complexity of Algorithm 2. There are two sort of operations for $W$ wavelengths and $N$ ONUs, whose complexity is $O(WlogW + NlogN)$. The complexity is $O(WNlogN)$ in sentence 7 and $O(2WN)$ in sentence 14-20. Note that $N > W$, and the complexity of Algorithm 2 is $O(N^2logN)$.
-\vspace{-4.0mm}
+\vspace{-3.0mm}
 
 \section{Illustrative Evaluations}
 \subsection{Simulation Setup}
@@ -777,9 +775,9 @@ We develop a hybrid C++/Python simulation platform to evaluate the performance. 
 
 \vspace{-5.0mm}
 \subsection{Performance Analysis}
-Fig. \ref{numerical}(a-c) show energy consumption, device lifetime, and ONU migrations when MES and WPS are applied to traffic-III. The $n$ in WPS (equals 1,2,3,4,5) represents the maximum number of postponed working wavelengths. We can find that energy consumption increases with the increment of the maximum number of postponed working wavelengths and postponed time. WPS consumes more energy than MES since extra working wavelengths are not powered off immediately. According to Fig. \ref{numerical}(b), a line card's lifetime reduces more than 50\% when energy efficiency is optimized. Owing to less frequent power state transitions, WPS$ -5 $ mitigates the lifetime degeneration by 17\% when postponed time is 7 hours, which means the device can work for more 18568 hours with our previous assumptions. In terms of the migrated traffic amount, MES triggers average 21\% migrated traffic in each period while only 9\% occurs when WPS$ -5 $ is applied based on Fig. \ref{numerical}(c). Due to less frequent power state transitions, ONUs are moved to a new wavelength in a lower possibility compared to MES.
+Fig. \ref{numerical}(a-c) show energy consumption, device lifetime, and ONU migrations when MES and WPS are applied to traffic-III. The $n$ in WPS (equals 1,2,3,4,5) represents the maximum number of postponed wavelengths. We can find that energy consumption increases with the increment of the maximum number of postponed working wavelengths and postponed time. WPS consumes more energy than MES since extra working wavelengths are not powered off immediately. According to Fig. \ref{numerical}(b), a line card's lifetime reduces more than 50\% when energy efficiency is optimized. Owing to less frequent power state transitions, WPS$ -5 $ mitigates the lifetime degeneration by 17\% when postponed time is 7 hours, which means the device can work for more 18568 hours with our previous assumptions. In terms of the migrated traffic amount, MES triggers average 21\% migrated traffic in each period while only 9\% occurs when WPS$ -5 $ is applied based on Fig. \ref{numerical}(c). Due to less frequent power state transitions, ONUs are moved to a new wavelength in a lower possibility compared to MES.
 
-Fig. \ref{numerical_2} demonstrates the system's performance when traffic fluctuates differently. In Fig. \ref{numerical_2}, default points show performance achieved by MES while minimum migration/lifetime degeneration points present the performance achieved by WPS$ -5 $ with 7 hours' delay. Device lifetime can be reduced by 45\%, 51\% and 56\% at default points compared to continuously working state while WPS alleviates the lifetime degeneration by 16\%, 15\%, and 17\% at minimum lifetime degeneration points, respectively. As for the migrated traffic amount, average 16\%, 18\%, and 21\% migrated traffic occurs in each period while low to 6\%, 7\%, 9\% is achieved by WPS at minimum migration points. When the amount of migrated traffic declines, the service interruption will be reduced, which improves the QoS performance.
+Fig. \ref{numerical_2} demonstrates the system's performance when traffic fluctuates differently. In Fig. \ref{numerical_2}, default points show performance achieved by MES while minimum migration/lifetime degeneration points present the performance achieved by WPS$ -5 $ with 7 hours' delay. Device lifetime can be reduced by 45\%, 51\% and 56\% at default points compared to continuously working state while WPS alleviates the lifetime degeneration by 16\%, 15\%, and 17\% at minimum lifetime degeneration points, respectively. As for the migrated traffic amount, average 16\%, 18\%, and 21\% migrated traffic occurs in each period while low to 6\%, 7\%, 9\% is achieved by WPS at minimum migration points. When the amount of migrated traffic declines, service interruptions will be reduced, which improves the QoS performance.
 It can be noticed that when traffic fluctuates more rapidly, the device lifetime deteriorates more severely and more migrated traffic occurs. It is because more fluctuant traffic load results in larger differences in the number of working wavelengths between two periods, thus leading to more power state transitions and ONU migrations. WPS reduces these differences by postponing the power-off of extra working wavelengths, which alleviates the device lifetime deterioration as well as reduces ONU migration simultaneously.
 \vspace{-3.0mm}
 
